fixed the footer alignments

--- a/a3_group43/soundscape/static/css/styles.css
+++ b/a3_group43/soundscape/static/css/styles.css
@@ -19,7 +19,7 @@ footer {
 }
 
 .footer-logo {
-    width: 7rem;
+    width: 6rem;
     height: 7rem;
     padding-top: 1.5rem;
 }
@@ -309,6 +309,9 @@ footer {
 
 @media (min-width: 320px) and (max-width: 844px) {
     .carousel {
+        display: none;
+    }
+    .footer-logo {
         display: none;
     }
 }
